--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <title>React Static Boilerplate</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic"> -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
   </head>
   <body>
     <div id="container"></div>
-    <script src="/dist/main.js?01b3f09b22ab502ed208"></script>
+    <script src="/dist/main.js?59cfae449eb4b6dcb6be"></script>
   </body>
 </html>
